# agentic-poc

./: .gitignore  README.md
comparison_crew/: README.md  compare_skills.bat  compare_skills.py  pyproject.toml  report.md  skills_gap_analysis.md
comparison_crew/examples/: README.md  job_requirements_example.txt  user_profile_example.txt
comparison_crew/src/comparison_crew/: crew.py  main.py
comparison_crew/src/comparison_crew/config/: agents.yaml  tasks.yaml
datagathering_crew/: README.md  pyproject.toml  resume_parsing_result.json  user_inputs.json  user_profile.json
datagathering_crew/src/datagathering_crew/: crew.py  main.py
datagathering_crew/src/datagathering_crew/config/: agents.yaml  tasks.yaml
datagathering_crew/src/datagathering_crew/tools/: document_tools.py
